# k8secretmount

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
