[package]
name = "k8secretmount"
version = "0.1.0"
authors = ["alexmorten <alexandrius.martinus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.17", features = ["full"] }
log = "0.4.8"
kube = "0.34.0"
kube-derive = "0.34.0"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
anyhow = "1.0.28"
env_logger = "0.7.1"
futures-util = "0.3.4"
futures = "0.3.4"
